typecheck/tests/micro/good/bi_expression_identi.c
//binary expression for literals and identifier
void main(void)
{
	//good
	int i;
	int j;
	i+j;
	i-j;
	i*j;
	i/j;
	i=j;
	i==j;
	i!=j;
	i<j;
	i>j;
	i<=j;
	i>=j; //should not have a problem here
	return;

}
